k8s/visits-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: visits-service
    version: v1
  name: visits-service
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: visits-service
        version: v1
      annotations:
        kiali.io/dashboards: micrometer-1.1-jvm,micrometer-1.0.6-jvm-pool,envoy
    spec:
      containers:
      - image: spring-petclinic-visits-service:latest
        name: visits-service
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness
          initialDelaySeconds: 90
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
          initialDelaySeconds: 15
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 1Gi
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
